--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "express-handlebars": "3.0",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
     "mysql2": "^2.3.3",
