--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^6.0.0",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
